--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:mysql://192.168.1.104:3306/report
-spring.datasource.username=rindusql
+spring.datasource.url=jdbc:mysql://172.29.100.128:3306/report
+spring.datasource.username=ayarinsql
 spring.datasource.password=Atri_123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
